--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,7 @@
         <item name="android:background">@drawable/default_button_selector</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:gravity">center</item>
+        <item name="android:onClick">executeAction</item>
     </style>
     <style name="redButtonStyle">
         <item name="android:layout_width">0dp</item>
@@ -30,6 +31,7 @@
         <item name="android:background">@drawable/red_button_selector</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:gravity">center</item>
+        <item name="android:onClick">executeAction</item>
     </style>
     <style name="gridLayoutStyle">
         <item name="android:layout_width">match_parent</item>
