--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,11 +5,11 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.Resources_calculator_app" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Resources_calculator_app" parent="Theme.AppCompat">
 
-        <item name="colorPrimary">@color/dark_gray</item>
-        <item name="colorPrimaryVariant">@color/red</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <item name="colorSecondary">@color/light_gray</item>
     </style>
+
+<!--    <style name="Theme.NoButtonOverride" parent="Theme.MaterialComponents.DayNight.NoActionBar">-->
+<!--        &lt;!&ndash; Do not include any global buttonStyle attributes here &ndash;&gt;-->
+<!--    </style>-->
 </resources>
