--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,10 +6,9 @@
     </style>
 
     <style name="Theme.Resources_calculator_app" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-
-        <item name="colorPrimary">@color/dark_gray</item>
+        <item name="colorPrimary">@color/light_gray</item>
         <item name="colorPrimaryVariant">@color/red</item>
         <item name="colorOnPrimary">@color/white</item>
-        <item name="colorSecondary">@color/light_gray</item>
+        <item name="colorSecondary">@color/dark_gray</item>
     </style>
 </resources>
